--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -56,7 +56,7 @@ pose_decoder:
 ##############################################3
 ## Data Configuration
 
-train_keyfilter: ['rays',
+train_keyfilter: ['rays', 'target_rgbs',
                   'motion_bases', 'motion_weights_priors',
                   'cnl_bbox', 'dst_posevec_69']
 test_keyfilter: ['rays', 'target_rgbs', 
@@ -66,7 +66,7 @@ test_keyfilter: ['rays', 'target_rgbs',
 train:
   perturb: 1.        # only for training, set to 0. for no jitter, 1. for jitter
   batch_size: 1
-  shuffle: True
+  shuffle: False
   drop_last: False
   maxiter: 400000
   lr: 0.0005  # 5e-4
@@ -128,7 +128,7 @@ perturb: 1.        # only for training, set to 0. for no jitter, 1. for jitter
 
 netchunk_per_gpu: 300000 # number of pts sent through network in parallel, decrease if running out of memory
 chunk: 32768   # 32768=1024*32, number of rays processed in parallel, decrease if running out of memory
-n_gpus: 1
+n_gpus: 2
 
 show_alpha: False  
 show_truth: False
